--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url_query_builder",
+  "name": "@elitmiar/url_query_builder",
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
