--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "types": "dist/index.d.ts",
   "prepublish": "tsc",
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elitmiar/url_query_builder"
+  }
 }
