Added ability to remove query parameters

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/elitmiar/url_query_builder"
+  },
+  "devDependencies": {
+    "typescript": "^4.0.3"
   }
 }
